--- a/src/main/resources/xava.properties
+++ b/src/main/resources/xava.properties
@@ -1,4 +1,4 @@
-# Mirar openxavatest/src/main/resources/xava.properties para más opciones
+# Mirar openxavatest/src/main/resources/xava.properties para mas opciones
 
 # Please note that the list of commented entries at the end of this file includes
 # ALL of the possible options, including those listed in OpenXavaTest and others not listed elsewhere.
