--- a/src/main/resources/naviox-users.properties
+++ b/src/main/resources/naviox-users.properties
@@ -4,14 +4,14 @@
 
 # ==================================================
 # USUARIOS DE PRUEBA - STD.io
-# Roles implementados vía convención de nombres
+# Roles implementados via convencion de nombres
 # ==================================================
 
 # ADMINISTRADORES (admin o admin_*)
 admin=admin
 admin_test=Admin123!
 
-# ACADÉMICOS (academico_*)
+# ACADEMICOS (academico_*)
 academico_test=Acad123!
 academico_coord=Coord123!
 
@@ -23,6 +23,6 @@ docente_castro=Doc123!
 docente_ruiz=Doc123!
 docente_mendoza=Doc123!
 
-# NOTA: Los roles se determinan automáticamente por el prefijo del username
+# NOTA: Los roles se determinan automaticamente por el prefijo del username
 # Ver: com.studio.stud_io2.util.SecurityHelper
 
